Hice un ejercicio de CSS Grid

--- a/index.html
+++ b/index.html
@@ -3,44 +3,21 @@
   <head>
     <title>michi2.dev</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="michi.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="icon" href="img/michi2.dev_logo.png" type="imagen/png">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header class="header">
-      <h1 class="titulo"> Software Devolopers</h1>
-      <nav>
-        <a href="index.html">Inicio</a>
-        <a href="html.html">HTML</a>
-        <a href="css.html">CSS</a>
-        <a href="python.html">Python</a>
-        <a href="git.html">Git</a>
-        <a href="linux.html">Linux</a>
-      </nav>
-    </header>
-    <main>
-      <p id="numero1-10">1,2,3,4,5,6,7,8,9,10</p>
-      <p id="abecedario">abcdefghijklmnopqrstuvwxyz</p>
-      <p id="vocales">a,e,i,o,u</p>
-    </main>
-    <details class="creditos">
-      <summary>Créditos</summary>
-      <p id="primerparrafo">Desarrollado por michi2.dev</p>
-      <p id="segundoparrafo">Imágenes de <a href="https://www.freepik.es/">Freepik</a></p>
-      <p id="tercerparrafo">Iconos de <a href="https://www.flaticon.com/">Flaticon</a></p>
-    </details>
-    <mark>holas</mark>
-    <del>holaa</del>
-    <ins>sbdfjhh</ins>
-    <sub>trbbdbecbebcerkbervbjh n</sub>
-    <sup>jhd xcdjb chjdbc </sup>
-
-    <dl>lista descriptiva
-      <dt>holaa</dt>
-      <dd>como estas</dd>
-      <dt>todo bien</dt>
-      <dd>como estas tu</dd>
-    </dl>
+    <h1>Photo Gallery</h1>
+    <div class="container">
+        <img class="photo-1" src="https://images.unsplash.com/photo-1561131989-b8112bafbd43?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo-1">
+        <img class="photo-2" src="https://media.istockphoto.com/id/613748228/photo/halloween.jpg?s=612x612&w=0&k=20&c=KCpmKXZ8p2E-tf1225rcg_QFZVdaTJewBJR_tmN4pZk=" alt="photo-2">
+        <img class="photo-3" src="https://media.istockphoto.com/id/2125004867/photo/a-disabled-person-with-a-physiotherapist-at-a-physiatry-rehabilitation-office.jpg?s=612x612&w=0&k=20&c=zT0EKBIabXsLQHpvWxPuOiq-hj_Gw6ELuJtEyWhQyRg=" alt="photo-3">
+        <img class="photo-4" src="https://images.unsplash.com/photo-1521125216278-bee8ad1f2f59?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="photo-4">
+        <img class="photo-5" src="https://images.unsplash.com/photo-1635620647573-57b6461d85fe?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDF8fHxlbnwwfHx8fHw%3D" alt="photo-5">
+        <img class="photo-6" src="https://images.unsplash.com/photo-1591573260950-e4909f7c19a3?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDZ8fHxlbnwwfHx8fHw%3D" alt="photo-6">
+    </div>
   </body>
 </html>
